--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,10 +5,11 @@
              android:layout_height="match_parent"
              tools:context="fragments.FirstFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv"
+            android:layout_margin="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="First tab"
-            android:textSize="40sp"/>
+            android:layout_height="wrap_content">
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
